# DeathStarBench

./: .gitignore
mediaMicroservices/: CMakeLists.txt  Dockerfile-builder-2204  docker-compose.yml
mediaMicroservices/config/: service-config.json
mediaMicroservices/datasets/tmdb/: filter_movie_files.py  gen_large_cast_files.py  gen_large_movie_files.py  gen_movie_ids.py  gen_movie_names.py  get_larget_cast_ids.py  (+7 more)
mediaMicroservices/gen-cpp/: media_service_types.h
mediaMicroservices/run/: client.sh  cp_services.sh  db_containers.txt  dev.sh  log.sh  persist_dbs.sh  populate_movies.sh  test.sh  test_client.sh  test_client_old.sh  up.sh
mediaMicroservices/scripts/: register_users_large.sh  write_movie_info_only.py
mediaMicroservices/src/: CMakeLists.txt  logger.h
mediaMicroservices/src/CastInfoService/: CMakeLists.txt  CastInfoHandler.h  CastInfoService.cpp
mediaMicroservices/src/Client/: CMakeLists.txt  Client.cpp  zipf.hpp
mediaMicroservices/src/ComposeReviewService/: CMakeLists.txt  ComposeReviewHandler.h  ComposeReviewService.cpp
mediaMicroservices/src/MovieIdService/: CMakeLists.txt  MovieIdHandler.h  MovieIdService.cpp
mediaMicroservices/src/MovieInfoService/: CMakeLists.txt  MovieInfoHandler.h  MovieInfoService.cpp
mediaMicroservices/src/MovieReviewService/: CMakeLists.txt  MovieReviewHandler.h
mediaMicroservices/src/PlotService/: CMakeLists.txt  PlotHandler.h  PlotService.cpp
mediaMicroservices/src/ReviewStorageService/: CMakeLists.txt  ReviewStorageHandler.h  ReviewStorageService.cpp
mediaMicroservices/src/TextService/: TextHandler.h
mediaMicroservices/src/UniqueIdService/: UniqueIdHandler.h
mediaMicroservices/src/UserService/: CMakeLists.txt  UserHandler.h  UserService.cpp
socialNetwork/: CMakeLists.txt  Dockerfile-builder-2204  README.md  cp_services.sh  dev.sh  docker-compose.yml  up.sh
socialNetwork/config/: service-config.json
socialNetwork/run/: client.sh  cp_services.sh  db_containers.txt  dev.sh  docker-pid.sh  persist_dbs.sh  service_containers.txt  up.sh
socialNetwork/scripts/: init_social_graph.py
socialNetwork/src/: CMakeLists.txt  sync_map.h
socialNetwork/wrk2/: run-workload.sh
(+14 files in other folders)
